# -sift-guardian-

./: .gitignore  LICENSE  LOCAL_EXECUTION_GUIDE.txt  README.md  main.py  pyproject.toml  requirements.txt  run_dashboard.py
docs/: architecture.md  project_description.md
src/: __init__.py  visualization.py
src/agent/: __init__.py  demo_data.py  orchestrator.py  planner.py  self_correction.py
src/logging/: __init__.py  audit.py
src/mcp_server/: __init__.py  server.py  tools.py  validation.py
src/validation/: __init__.py  accuracy.py  integrity.py
tests/: __init__.py  test_agent.py  test_mcp_server.py  test_validation.py
